Fixed social icons overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 section {
   display: block;
   height: calc(85% + 1.5em);
+  min-height: 100px;
 }
 section h1 {
   font-family: Helvetica, Arial, sans-serif;
@@ -127,7 +128,7 @@ section h1 {
 }
 
 #contact {
-  height: 40%;
+  height: unset;
   background-color: #f5f5f5;
 }
 #contact #contact-icons {
