--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,5 +1,5 @@
 #contact {
-	height: 40%;
+	height: unset;
 	background-color: #f5f5f5;
 
 	#contact-icons {
